--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Binaries for programs and plugins
-*.exe
-*.dll
-*.so
-*.dylib
+# Serverless directories
+.serverless
 
-# Test binary, build with `go test -c`
-*.test
+# golang output binary directory
+bin
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
-.glide/
+# golang vendor (dependencies) directory
+vendor
