--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,7 @@ service: serverless-learning
 provider:
   name: aws
   runtime: go1.x
+  region: ap-northeast-1
 
 # you can overwrite defaults here
 #  stage: dev
@@ -45,11 +46,11 @@ provider:
 #  environment:
 #    variable1: value1
 
-package:
- exclude:
-   - ./**
- include:
-   - ./bin/**
+# package:
+#   exclude:
+#     - ./**
+#   include:
+#     - ./bin/**
 
 functions:
   hello:
