Add ApiGateway setting

--- a/serverless.yml
+++ b/serverless.yml
@@ -55,8 +55,16 @@ provider:
 functions:
   hello:
     handler: bin/hello
+    events:
+      - http:
+          path: hello
+          method: get
   world:
     handler: bin/world
+    events:
+      - http:
+          path: world
+          method: get
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
